objects/Implementation__c.object
<CustomObject>
    <fields>
        <fullName>Start_Date_Status__c</fullName>
        <label>Start Date Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PSH comfortable with no start date</fullName>
                </value>
                <value>
                    <fullName>Pushing start date</fullName>
                </value>
                <value>
                    <fullName>Tentative start date</fullName>
                </value>
                <value>
                    <fullName>No start date</fullName>
                </value>
                <value>
                    <fullName>Client went dark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Closed_Reason_1__c</fullName>
        <label>Sub-Closed Reason 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HC Savings</fullName>
                </value>
                <value>
                    <fullName>WC Savings</fullName>
                </value>
                <value>
                    <fullName>Price vs. Competitor</fullName>
                </value>
                <value>
                    <fullName>Price vs. In-House</fullName>
                </value>
                <value>
                    <fullName>Service Level vs. Competitor</fullName>
                </value>
                <value>
                    <fullName>Service Level Perception in Market</fullName>
                </value>
                <value>
                    <fullName>Service Level Appreciation During Sales Process</fullName>
                </value>
                <value>
                    <fullName>Applicant Tracking System</fullName>
                </value>
                <value>
                    <fullName>Benefits Administration</fullName>
                </value>
                <value>
                    <fullName>Broker Relationship</fullName>
                </value>
                <value>
                    <fullName>Compliance Support</fullName>
                </value>
                <value>
                    <fullName>Custom Reporting</fullName>
                </value>
                <value>
                    <fullName>Direct to Carrier</fullName>
                </value>
                <value>
                    <fullName>eOnboarding</fullName>
                </value>
                <value>
                    <fullName>Payroll Only Alternative</fullName>
                </value>
                <value>
                    <fullName>Subject Matter Experts</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Attendance</fullName>
                </value>
                <value>
                    <fullName>UltiPro</fullName>
                </value>
                <value>
                    <fullName>Internal PSH relationships</fullName>
                </value>
                <value>
                    <fullName>PSH Client Referral</fullName>
                </value>
                <value>
                    <fullName>Common Ownership</fullName>
                </value>
                <value>
                    <fullName>Length of Process</fullName>
                </value>
                <value>
                    <fullName>HC Underwriting Process</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplemental_Benefits__c</fullName>
        <label>Supplemental Benefits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PSH-FSA</fullName>
                </value>
                <value>
                    <fullName>PSH-AFLAC</fullName>
                </value>
                <value>
                    <fullName>PSH-TRS</fullName>
                </value>
                <value>
                    <fullName>CLR-FSA</fullName>
                </value>
                <value>
                    <fullName>CLR-AFLAC</fullName>
                </value>
                <value>
                    <fullName>CLR-LIFE</fullName>
                </value>
                <value>
                    <fullName>CLR-OTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Transition_Date__c</fullName>
        <label>Team Transition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Payroll_Date__c</fullName>
        <label>Test Payroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Payroll__c</fullName>
        <label>Test Payroll</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Payroll_Date__c</fullName>
        <label>Third Payroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Clocks__c</fullName>
        <label>Time Clocks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_and_Attendance__c</fullName>
        <label>Time and Attendance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>SBE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Transition &lt; 4th Payroll</description>
        <label>Transition &lt; 4th Payroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transitioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transitioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Construction__c</fullName>
        <label>Type of Construction:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Steel Frame</fullName>
                </value>
                <value>
                    <fullName>Reinforced Masonry</fullName>
                </value>
                <value>
                    <fullName>Concrete Tilt-up</fullName>
                </value>
                <value>
                    <fullName>Wood Frame</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WC_CPP__c</fullName>
        <label>WC CPP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>123</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Packet_Exceptions__c</fullName>
        <description>Welcome Packet Exceptions (previously tracked in CS)</description>
        <inlineHelpText>Welcome Packet Exceptions (previously tracked in CS)</inlineHelpText>
        <label>Welcome Packet Exceptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Payroll_Accuracy__c</fullName>
        <label>1st Payroll Accuracy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X401K__c</fullName>
        <label>401K</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLR</fullName>
                </value>
                <value>
                    <fullName>PSH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <label>Year Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Z401K__c</fullName>
        <label>401K</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLR</fullName>
                </value>
                <value>
                    <fullName>PSH</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Employees__c</fullName>
        <description># of Employees</description>
        <label>Projected # of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Implementation PM</label>
    <nameField>
        <label>Implementation ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementation PM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Coord__c</columns>
        <columns>Client__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team_Transition_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Joseph_Bangal</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Coord__c</columns>
        <columns>Client__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Joseph Bangal</value>
        </filters>
        <label>Joseph Bangal</label>
    </listViews>
    <listViews>
        <fullName>Kai_Adams</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Coord__c</columns>
        <columns>Client__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Kai Adams</value>
        </filters>
        <label>Kai Adams</label>
    </listViews>
    <listViews>
        <fullName>Kelii_Moreau</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Coord__c</columns>
        <columns>Client__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Coord__c</field>
            <operation>equals</operation>
            <value>Kelii Moreau</value>
        </filters>
        <label>Keli'i Moreau</label>
    </listViews>
    <listViews>
        <fullName>Rachel_Martin</fullName>
        <columns>NAME</columns>
        <columns>Implementation_Coord__c</columns>
        <columns>Client__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Color__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Coord__c</field>
            <operation>equals</operation>
            <value>Rachel Martin</value>
        </filters>
        <filters>
            <field>Team_Transition_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Rachel Martin</label>
    </listViews>
</CustomObject>